@@ -1,3 +1,7 @@
+2005-03-29 18:50  antirez
+
+	* ChangeLog, jim.c, test.tcl: [info args] added
+
 2005-03-29 16:17  antirez
 
 	* ChangeLog, jim.c: Fixed [range] for the case of unique element
